--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato', 'Light', sans-serif;
 }
 p {
     font-size: 1.5em;
